--- a/package.json
+++ b/package.json
@@ -47,9 +47,14 @@
     "@angular/language-service": "^17.0.2",
     "@capacitor/cli": "5.6.0",
     "@ionic/angular-toolkit": "^9.0.0",
+    "@tailwindcss/aspect-ratio": "latest",
+    "@tailwindcss/forms": "latest",
+    "@tailwindcss/line-clamp": "latest",
+    "@tailwindcss/typography": "latest",
     "@types/jasmine": "~5.1.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
+    "autoprefixer": "^10.4.16",
     "eslint": "^7.26.0",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-jsdoc": "30.7.6",
@@ -61,6 +66,9 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "ngx-tailwind": "^4.0.0",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.4.0",
     "ts-node": "^8.3.0",
     "typescript": "~5.2.2"
   },
